# cypher-assistant-apk

./: .gitignore  README.md  install_on_android.sh
.github/workflows/: build-apk.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: cypher_core.js  index.html  styles.css
android/app/src/main/assets/android/: AndroidManifest.xml
android/app/src/main/assets/cypher/: __init__.py  agent.py  android_bridge.py  brain.py  call_manager.py  cypher_mobile_daemon.py  memory.py  permissions.py  wake_word_engine.py
android/app/src/main/assets/cypher/tools/: __init__.py  android.py  filesystem.py  system.py  web.py
android/app/src/main/java/ai/cypher/assistant/: BootReceiver.kt  CypherBackgroundService.kt  (+1 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
cypher/: android_bridge.py  audio_capture.py  brain.py  cypher_mobile_daemon.py  permissions.py  stt_engine.py  wake_word_engine.py
cypher/tools/: android.py  base.py  code.py  utils.py
cypher/ui/: tui.py
cypher_app/: hologram.js  index.html
cypher_app/android/: settings.gradle.kts
cypher_app/android/app/: build.gradle.kts  proguard-rules.pro
cypher_app/android/app/src/main/: AndroidManifest.xml
cypher_app/android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
cypher_app/android/app/src/main/res/values/: strings.xml  themes.xml
cypher_app/android/app/src/main/res/xml/: file_paths.xml
desktop_test/: README.md  cypher_desktop.py
(+13 files in other folders)
